@@ -34,6 +34,7 @@ Changes in 2.0.3-alpha:
  o Stop using enums as arguments or return values when what we mean is a bitfield of enum values.  C++ doesn't believe that you can OR two enum values together and get another enum, and C++ takes its typing seriously.  Patch from Christopher Davis.
  o Add an API to replace all fatal calls to exit() with a user-provided panic function.
  o Replace all assert() calls with a variant that is aware of the user-provided logging and panic functions.
+ o Add a return value to event_assign so that it can fail rather than asserting when the user gives it bad input.  event_set still dies on bad input.
 
 
 Changes in 2.0.2-alpha:
